Update jekyll site structure and files

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
-    <div class="text-center p-4">
+    <div class="text-right">
         {% for item in site.data.navigation %}
-        <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>
+        <a href="{{ item.link }}" {% if page.url==item.link %}class="current"{% endif %}>
             {{ item.name }}
         </a> &nbsp;
         {% endfor %}
