--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&display=swap');
 body {
     font-family: sans-serif;
-    padding: 0;
+    padding-top: 3.5rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    margin: 0;
+
+    @media screen and (max-width: 900px) {
+        padding: 3rem;
+    }
 }
 
 nav a {
@@ -14,7 +22,62 @@ nav a {
     color: hotpink;
 }
 
+h2 {
+    font-family: 'Bodoni Moda', serif;
+    font-size: 3rem;
+}
+
+.row {
+    width: 100%;
+}
+
 .circle {
     border-radius: 50%;
     max-width: 50%;
+}
+
+// .intro-text {
+// @media screen and (max-width: 900px) {
+//     padding-left: 3rem;
+//     padding-top: 3rem;
+//     padding-right: 0!important;
+// }
+// }
+
+// .intro-name {
+//     @media screen and (max-width: 900px) {
+//         text-align: center;
+//         padding-top: 0!important;
+//         padding-right: 0!important;
+//     }
+// }
+
+// .intro-body {
+//     @media screen and (max-width: 900px) {
+//     }
+// }
+
+.contained {
+    padding-top: 5%;
+    // padding-left: 10%;
+    // padding-right: 10%;
+    align-content: center;
+}
+
+/*Footer*/
+
+.tiny {
+    max-width: 10%;
+}
+
+.no-bullet {
+    list-style-type: none;
+}
+
+footer {
+    padding-top: 5em;
+}
+
+footer a {
+    color: black;
 }
