--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,14 @@
 <nav>
-    <div class="text-right">
-        {% for item in site.data.navigation %}
-        <a href="{{ item.link }}" {% if page.url==item.link %}class="current"{% endif %}>
-            {{ item.name }}
-        </a> &nbsp;
-        {% endfor %}
+    <div class="row">
+        <div class="col text-left">
+            <h1>{{ "SarahMay Harel" | | upcase }}</h1>
+        </div>
+        <div class="col text-right navigation">
+            {% for item in site.data.navigation %}
+            <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>
+                {{ item.name | upcase }}
+            </a> &nbsp;
+            {% endfor %}
+        </div>
     </div>
 </nav>
