--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,51 +11,71 @@ body {
     }
 }
 
-nav a {
+a {
     color: black;
     text-decoration: none;
     font-weight: 600;
-    text-align: center;
+}
+
+a:hover {
+    color: hotpink;
+    text-decoration: none;
 }
 
 .current {
     color: hotpink;
 }
 
+nav a {
+    text-align: center;
+}
+
+.navigation {
+    align-items: center;
+}
+
+h1 {
+    font-family: 'Bodoni Moda', serif;
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+}
+
+
 h2 {
     font-family: 'Bodoni Moda', serif;
     font-size: 3rem;
+    font-weight: 300;
 }
 
-.row {
-    width: 100%;
+// .row {
+//     width: 100%;
+// }
+
+.headshot {
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .circle {
     border-radius: 50%;
     max-width: 50%;
+    @media screen and (max-width: 750px) {
+        max-width: 80%;
+    }
 }
 
-// .intro-text {
-// @media screen and (max-width: 900px) {
-//     padding-left: 3rem;
-//     padding-top: 3rem;
-//     padding-right: 0!important;
-// }
-// }
+.skills {
+    margin-top: 3rem;
+    font-weight: 600;
+    line-height: 2rem;
+}
 
-// .intro-name {
-//     @media screen and (max-width: 900px) {
-//         text-align: center;
-//         padding-top: 0!important;
-//         padding-right: 0!important;
-//     }
-// }
-
-// .intro-body {
-//     @media screen and (max-width: 900px) {
-//     }
-// }
+.experience {
+    margin-top: 3rem;
+}
 
 .contained {
     padding-top: 5%;
@@ -76,8 +96,8 @@ h2 {
 
 footer {
     padding-top: 5em;
-}
-
-footer a {
+    padding-bottom: 2em;
     color: black;
+    font-weight: 600;
+    font-size: .75rem;
 }
