--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-6 col-sm-12 text-right navigation">
             {% for item in site.data.navigation %}
-            <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>
+            <a href="/sarahmayharel/{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>
                 {{ item.name | upcase }}
             </a> &nbsp;
             {% endfor %}
