--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     {% include navigation.html %}
+    <div class="content">
     {{ content }}
+    </div>
     {% include footer.html %}
   </body>
 </html>
