--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,10 +5,17 @@ body {
     padding-left: 10rem;
     padding-right: 10rem;
     margin: 0;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 
     @media screen and (max-width: 900px) {
         padding: 3rem;
     }
+}
+
+.content {
+    flex: 1;
 }
 
 a {
@@ -100,6 +107,8 @@ footer {
     color: black;
     font-weight: 600;
     font-size: .75rem;
+    margin-top: auto;
+    bottom: 0;
 }
 
 /* Resume */
