--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 body {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding-top: 3.5rem;
     padding-left: 10rem;
     padding-right: 10rem;
@@ -54,6 +55,15 @@ h2 {
     font-family: 'Bodoni Moda', serif;
     font-size: 3rem;
     font-weight: 300;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+
+h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    padding-top: 3rem;
+    padding-bottom: 1rem;
 }
 
 // .row {
@@ -116,3 +126,27 @@ footer {
 .resume-image {
     max-width: 90%;
 }
+
+/* Projects */
+
+.project-image {
+    max-width: 100%;
+    border-radius: 5%;
+}
+
+.project-info {
+    justify-content: left;
+    align-items: center;
+    display: flex;
+}
+
+.project-stack {
+    color: darkgray;
+}
+
+.project-overview li {
+    margin: 10px 0;
+}
+
+/* Portfolio project gallery */
+
