--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,8 @@
 <nav>
-    <div class="row">
+    <div class="row padrule">
         <div class="col-md-6 col-sm-12 text-left">
-            <h1>{{ "SarahMay Harel" | | upcase }}</h1>
+            <h1 style="font-size: 1.3em">{{ "SarahMay" | upcase }}</h1>
+            <h1 style="font-size: 1.3em">&emsp;&emsp;&emsp;&emsp;&emsp;{{ "Harel" | upcase }}</h1>
         </div>
         <div class="col-md-6 col-sm-12 text-right navigation">
             {% for item in site.data.navigation %}
