--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,18 +12,25 @@
 body {
     font-family: 'Open Sans', sans-serif;
     padding-top: 3.5rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
     margin: 0;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
     background-color: oldlace;
-
+    padding-left: 10rem;
+    padding-right: 10rem;
     @media screen and (max-width: 900px) {
         padding: 3rem;
     }
 }
+
+// .padrule {
+//     padding-left: 10rem;
+//     padding-right: 10rem;
+//     @media screen and (max-width: 900px) {
+//         padding: 3rem;
+//     }
+// }
 
 .content {
     flex: 1;
@@ -54,16 +61,14 @@ nav a {
 
 h1 {
     font-family: 'yipesregular', serif;
-    font-size: 2.25rem;
+    font-size: 3em;
     font-weight: 300;
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
 }
 
 
 h2 {
-    font-family: 'Bodoni Moda', serif;
-    font-size: 3rem;
+    font-family: 'yipesregular', serif;
+    font-size: 2.25rem;
     font-weight: 300;
     padding-top: 3rem;
     padding-bottom: 2rem;
@@ -76,9 +81,9 @@ h3 {
     padding-bottom: 1rem;
 }
 
-// .row {
-//     width: 100%;
-// }
+.row {
+    width: 100%;
+}
 
 .headshot {
     align-items: center;
@@ -95,21 +100,24 @@ h3 {
 }
 
 .skills {
-    margin-top: 3rem;
     font-weight: 600;
     line-height: 2rem;
 }
 
-.experience {
-    margin-top: 3rem;
+.skillscont {
+    background-color: #556b2f8c;
 }
 
-.contained {
-    padding-top: 5%;
-    // padding-left: 10%;
-    // padding-right: 10%;
-    align-content: center;
-}
+// .experience {
+//     margin-top: 3rem;
+// }
+
+// .contained {
+//     padding-top: 5%;
+//     // padding-left: 10%;
+//     // padding-right: 10%;
+//     align-content: center;
+// }
 
 /*Footer*/
 
@@ -158,5 +166,62 @@ footer {
     margin: 10px 0;
 }
 
-/* Portfolio project gallery */
+/* decorations */
+.flower2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 50%;
+    z-index: -1;
+    overflow: unset;
+}
 
+.flower2img {
+    width: 250px;
+}
+
+.flower {
+    top: 500px;
+    position: absolute;
+    left: -120px;
+    // opacity: 50%;
+    z-index: 1;
+    overflow: unset;
+    transform: rotate(15deg);
+}
+
+.flowerimg {
+    width: 250px;
+
+    @media screen and (max-width: 900px) {
+        display: none;
+    }
+}
+
+.mushrooms {
+    position: absolute;
+    right: 0;
+    top: 60rem;
+    // opacity: 50%;
+    z-index: 1;
+    overflow: unset;
+}
+
+.mushroomimg {
+    width: 250px;
+    @media screen and (max-width: 900px) {
+        display:none;
+    }
+}
+
+.plant {
+    position: absolute;
+    left: 0;
+    opacity: 50%;
+    z-index: -1;
+    overflow: unset;
+}
+
+.plantimg {
+    max-width: 50%;
+}
