Testing source for font

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'yipesregular';
-    src: url('https://github.com/sarahmay-harel/sarahmayharel/blob/bd3182bad647113fdbc3a28f3503decb000674c3/Yipes.otf');
+    src: url('/Yipes.otf');
     font-weight: normal;
     font-style: normal;
 
