Testing source for font

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'yipesregular';
-    src: url('/Yipes.otf');
+    src: url('/assets/fonts/Yipes.ttf') format("truetype");
     font-weight: normal;
     font-style: normal;
 
