--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="skillscont">
-    <div class="row">
+<footer class="skillscont d-flex justify-content-center">
+    <div class="row  align-items-center">
 
         <div class="col-md-4 col-sm-12 text-center">
             {% for item in site.data.navigation %}
