--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&display=swap');
+
+/* fonts
+
+font-family: 'Bangers', cursive;
+font-family: 'Bodoni Moda', serif;
+font-family: 'Butcherman', cursive;
+font-family: 'Eczar', serif;
+font-family: 'Fruktur', cursive;
+font-family: 'Ibarra Real Nova', serif;
+font-family: 'IM Fell English', serif;
+font-family: 'Katibeh', cursive;
+font-family: 'Kavoon', cursive;
+font-family: 'Luckiest Guy', cursive;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Rubik Wet Paint', cursive;
+*/
 
 
 @font-face {
@@ -6,7 +22,6 @@
     src: url('/assets/fonts/Yipes.ttf') format("truetype");
     font-weight: normal;
     font-style: normal;
-
 }
 
 body {
