--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -83,14 +83,14 @@ nav a {
 }
 
 h1 {
-    font-family: 'yipesregular', serif;
+    font-family: 'Ibarra Real Nova', serif;
     font-size: 3em;
     font-weight: 300;
 }
 
 
 h2 {
-    font-family: 'yipesregular', serif;
+    font-family: 'Ibarra Real Nova', serif;
     font-size: 2.25rem;
     font-weight: 300;
     padding-top: 3rem;
@@ -108,13 +108,20 @@ h3 {
     width: 100%;
 }
 
+.intro {
+    padding-top: 3rem;
+    padding-bottom: 10rem;
+}
+
 .headshot {
     align-items: center;
     justify-content: center;
     display: flex;
+    
 }
 
 .circle {
+    // border: 10px solid #cbb3148c;
     border-radius: 50%;
     max-width: 50%;
     @media screen and (max-width: 750px) {
@@ -127,8 +134,28 @@ h3 {
     line-height: 2rem;
 }
 
+
 .skillscont {
-    background-color: #556b2f8c;
+    background-image: url(/assets/img/green-wave-4.png);
+    background-size: 100%;
+    background-position: 0 20%;
+    background-repeat: no-repeat;
+    // background-color: #A1AA82;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+
+    @media screen and (max-width: 740px) {
+        background-image: url(/assets/img/green-wave-3.png);
+        background-size: 150%;
+    }
+    @media screen and (max-width: 480px) {
+        background-image: url(/assets/img/green-wave-3.png);
+        background-size: 200%;
+    }
+    @media screen and (max-width: 360px) {
+        background-image: url(/assets/img/green-wave-3.png);
+        background-size: 300%;
+    }
 }
 
 // .experience {
@@ -178,6 +205,7 @@ footer {
     font-size: .75rem;
     margin-top: auto;
     bottom: 0;
+    background-color: #A1AA82;
 }
 
 /* Resume */
