--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -74,13 +74,20 @@ a:hover {
     text-underline-offset: 5px;
 }
 
+nav {
+    padding-left: 3rem!important;
+    @media screen and (max-width: 740px) {
+        padding-left: 33px;
+    }
+}
+
 nav a {
     text-align: center;
 }
 
-.navigation {
-    align-items: center;
-}
+// .navigation {
+//     align-items: center;
+// }
 
 h1 {
     font-family: 'Ibarra Real Nova', serif;
@@ -136,7 +143,7 @@ h3 {
 
 
 .skillscont {
-    background-image: url(/assets/img/green-wave-4.png);
+    background-image: url(./assets/img/green-wave-4.png);
     background-size: 100%;
     background-position: 0 20%;
     background-repeat: no-repeat;
@@ -145,15 +152,15 @@ h3 {
     padding-bottom: 10rem;
 
     @media screen and (max-width: 740px) {
-        background-image: url(/assets/img/green-wave-3.png);
+        background-image: url(./assets/img/green-wave-3.png);
         background-size: 150%;
     }
     @media screen and (max-width: 480px) {
-        background-image: url(/assets/img/green-wave-3.png);
+        background-image: url(./assets/img/green-wave-3.png);
         background-size: 200%;
     }
     @media screen and (max-width: 360px) {
-        background-image: url(/assets/img/green-wave-3.png);
+        background-image: url(./assets/img/green-wave-3.png);
         background-size: 300%;
     }
 }
