--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,8 @@
 //2. Link skills to Projects
 //3. Add Bowtie projects
 //4. Get rid of extra images and assets
+//5. Fix projects page on mobile view
+//6. Add links to open project images large view
 
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&display=swap');
 
