Fix responsive display on mobile projects page, add todos

--- a/_includes/project2.html
+++ b/_includes/project2.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="row pt-5 padrule">
-    <div class="col-md-6 col-sm-12">
+    <div class="col-md-6 col-sm-12 mobile-col">
       <img src="assets/img/data-analytics-cyber-week.png" class="project-image">
     </div>
     <div class="col-md-6 col-sm-12">
