--- a/_includes/project1.html
+++ b/_includes/project1.html
@@ -33,9 +33,22 @@
     </ul>
 </div>
 
-<div class="row pt-5 pb-5 padrule">
-    <div class="col-md-8 col-sm-12">
+
+<!-- Trigger/Open The Modal -->
+
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
       <img src="assets/img/workman-similar-products-tablet.webp" class="project-image">
+    </div>
+  
+  </div>
+
+<div class="row pt-5 pb-5 padrule">
+    <div class="col-md-8 col-sm-12 mobile-col">
+      <img id="myBtn" src="assets/img/workman-similar-products-tablet.webp" class="project-image">
     </div>
     <div class="col-md-4 col-sm-12">
       <img src="assets/img/workman-gift-messaging-mobile.webp" class="project-image mb-3">
@@ -43,3 +56,31 @@
     </div>
   </div>
   <hr>
+
+  <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+    
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
