--- a/_includes/project3.html
+++ b/_includes/project3.html
@@ -1,4 +1,4 @@
-<div class="project-intro pt-5 padrule">
+<div class="project-intro padrule">
     <h2 class="pb-0">eCommerce Website Redesign
     </h2>
     <p class="project-stack">2019 / Project Management, UX/UI</p>
@@ -37,7 +37,7 @@
 </div>
 
 <div class="row pt-5 pb-5 padrule">
-    <div class="col-md-8 col-sm-12">
+    <div class="col-md-8 col-sm-12 mobile-col">
       <img src="assets/img/pageaday-contest-tablet-1-2.png" class="project-image">
     </div>
     <div class="col-md-4 col-sm-12">
