Add grid for technologies section

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -150,6 +150,12 @@ h3 {
     position: relative;
 }
 
+.shape-bottom {
+    @media screen and (max-width: 740px) {
+        padding-bottom: 2rem;
+    }
+}
+
 //shape 1
 .custom-shape-divider-top-1658328325 {
     position: absolute;
@@ -213,9 +219,8 @@ h3 {
 }
 
 .skills {
-    font-weight: 600;
+    font-weight: 400;
     line-height: 2rem;
-    white-space: nowrap;
 }
 
 
@@ -454,6 +459,7 @@ footer {
     padding-left: 4rem;
 }
 
+/* Tools */
 .tools {
     max-width: 100px;
 }
@@ -471,6 +477,19 @@ footer {
     margin-top: .5rem;
 }
 
-.test {
+.short-logo {
+    height: 100px;
+    transform: translateY(30%);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    @media screen and (max-width: 740px) {
+        display:none;
+    }
+}
+
+.logo-height {
     height: 100px;
 }
