--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
             <!-- <a href="/sarahmayharel" class="text-left title"><h1 style="font-size: 1.3em">{{ "SarahMay" | upcase }}</h1>
             <h1 style="font-size: 1.3em;margin-left:80px;"">{{ "Harel" | upcase }}</h1></a> -->
 
-            <a href="/sarahmayharel" class="title"><h1 style="font-size: 2em">{{ "SarahMay Harel" }}</h1></a>
+            <a href="/sarahmayharel" class="title"><h1 style="font-size: 2em">{{ "SarahMay Harel" }} 🪴</h1></a>
         </div>
         <div class="col-md-6 col-sm-12 navigation text-right">
             {% for item in site.data.navigation %}
