--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,11 @@
 // Remove SMH from nav
 // Change skills and exp to thirds cols
 // Change projects to have "see more"
+// Fix plant pot icon for PC/android devices?
+// Accessibility audit - especially with dark mode colors
+// Change leaf png to white for dark mode
+// Change tech logos to white in dark mode
+// Try navy/night sky color palatte for dark mode
 
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&display=swap');
 
