--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/potted-plant-emoji-favicon.png">
     <script src="https://kit.fontawesome.com/2d47902197.js" crossorigin="anonymous"></script>
+    <script src="assets/script.js" crossorigin="anonymous"></script>
   </head>
   <body>
     {% include navigation.html %}
@@ -25,11 +26,11 @@
   </div>
     {% include footer.html %}
 
-    <script>
+    <!-- <script>
       function myFunction() {
   var element = document.body;
   element.classList.toggle("dark-mode");
 }
-    </script>
+    </script> -->
   </body>
 </html>
