Add todo re darkmode

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,5 @@
 //TODO
+// FIX DARK MODE especially checkbox behavior. If box is checked its saved in localStorage, but doesn't stay checked-looking for user
 // Update header/nav padding (see Projects page)
 // Link skills to Projects
 // Add Bowtie projects, Add skills to each project, add anchor links TOC to projects at top of page 
