--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
   <body id="body">
     {% include navigation.html %}
-    <button><input type="checkbox" id="moonButton" onclick="myFunction()"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
+    <button><input class="dark-mode-checkbox" type="checkbox" id="moonButton" onclick="myFunction()"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
     <div class="content">
     {{ content }}
     </div>
