--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/potted-plant-emoji-favicon.png">
     <script src="https://kit.fontawesome.com/2d47902197.js" crossorigin="anonymous"></script>
   </head>
-  <body id="body">
+  <body id="bodyID">
     {% include navigation.html %}
-    <button><input class="dark-mode-checkbox" type="checkbox" id="moonButton" onclick="myFunction()"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
+    <button><input class="dark-mode-checkbox" type="checkbox" id="moonButton"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
     <div class="content">
     {{ content }}
     </div>
@@ -24,13 +24,6 @@
       </div>
   </div>
     {% include footer.html %}
-
-    <!-- <script>
-      function myFunction() {
-  var element = document.body;
-  element.classList.toggle("dark-mode");
-}
-    </script> -->
     <script src="assets/script.js" crossorigin="anonymous"></script>
   </body>
 </html>
