--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -88,14 +88,6 @@ body {
     }
 }
 
-.minimalist .hide {
-    display: none;
-}
-
-.dark-mode .minimalist .hide {
-    display: block;
-}
-
 .dark-mode-checkbox {
     opacity: 0;
     position: absolute;
@@ -103,10 +95,6 @@ body {
     height: 60px;
     bottom: 2px;
     right: 2px;
-}
-
-.stars {
-    filter: grayscale(1);
 }
 
 button {
@@ -314,27 +302,27 @@ h3 {
 
 
 .skillscont {
-    background-image: url(./assets/img/green-wave-4.png);
-    background-size: 100%;
-    background-position: 0 20%;
-    background-repeat: no-repeat;
+    // background-image: url(./assets/img/green-wave-4.png);
+    // background-size: 100%;
+    // background-position: 0 20%;
+    // background-repeat: no-repeat;
     background-color: #A1AA82;
     padding-top: 8em;
     padding-bottom: 2rem;
 
-    @media screen and (max-width: 740px) {
-        background-image: url(./assets/img/green-wave-3.png);
-        background-size: 150%;
-    }
-    @media screen and (max-width: 480px) {
-        background-image: url(./assets/img/green-wave-3.png);
-        background-size: 200%;
-    }
-    @media screen and (max-width: 360px) {
-        background-image: url(./assets/img/green-wave-3.png);
-        background-size: 300%;
+    // @media screen and (max-width: 740px) {
+    //     background-image: url(./assets/img/green-wave-3.png);
+    //     background-size: 150%;
+    // }
+    // @media screen and (max-width: 480px) {
+    //     background-image: url(./assets/img/green-wave-3.png);
+    //     background-size: 200%;
+    // }
+    // @media screen and (max-width: 360px) {
+    //     background-image: url(./assets/img/green-wave-3.png);
+    //     background-size: 300%;
 
-    }
+    // }
 }
 
 .dark-mode .skillscont {
@@ -500,12 +488,26 @@ footer {
 .minimalist {
     max-width: 70%;
     margin: 0 auto;
+    display: inline;
 }
 
 .minimalist2 {
     max-width: 70%;
     margin: 0 auto;
     transform: scaleX(-1)
+}
+
+
+.minimalist .leaf {
+    opacity: 100%;
+}
+
+.dark-mode .leaf {
+    opacity: 0;
+}
+
+.stars {
+    filter: grayscale(1);
 }
 
 /* The Modal (background) */
