Update todo list

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,22 +3,17 @@
 // FIX DARK MODE especially checkbox behavior. If box is checked its saved in localStorage, but doesn't stay checked-looking for user
 // Update header/nav padding (see Projects page)
 // Link skills to Projects
-// Add Bowtie projects, Add skills to each project, add anchor links TOC to projects at top of page 
+// Add Bowtie projects, add CSS projects (super-css), add skills to each project, add anchor links TOC to projects at top of page 
 // Get rid of extra images and assets
 // Refactor modal script to apply for project images
-// Add dark mode
 // Add skills: SASS, Bootstrap
-// Add Certifications and Technologies
 // Add hoverstate to social icons in footer
-// Space out top navigation
-// Remove SMH from nav
 // Change skills and exp to thirds cols
 // Change projects to have "see more"
 // Fix plant pot icon for PC/android devices?
 // Accessibility audit - especially with dark mode colors
-// Change leaf png to white for dark mode - use OPACITY for show/hide leaf vs stars for dark mode
-// Change tech logos to white in dark mode
-// Try navy/night sky color palatte for dark mode
+
+
 
 // Color Ideas
 // Mauve #aa8297
