Add project, adjust contact page content position, recipe page

--- a/_includes/project1.html
+++ b/_includes/project1.html
@@ -1,6 +1,6 @@
-<div class="project-intro pt-5 padrule">
+<div class="project-intro padrule">
     <h2 class="pb-0">Customized Shopify Templates</h2>
-    <p class="project-stack">2021/eCommerce Strategy, Shopify Liquid, Ruby</p>
+    <p class="project-stack">2021 / eCommerce Strategy, Shopify Liquid, Ruby</p>
 </div>
 
 <div class="row padrule">
@@ -46,7 +46,7 @@
   
   </div>
 
-<div class="row pt-5 pb-5 padrule">
+<div class="row pt-5 padrule">
     <div class="col-md-8 col-sm-12 mobile-col">
       <img id="myBtn" src="assets/img/workman-similar-products-tablet.webp" class="project-image">
     </div>
