Update gemfile stuff and fix scss compilation error from ruby upgrade

--- a/_sass/_recipe.scss
+++ b/_sass/_recipe.scss
@@ -1,4 +1,4 @@
-//SCSS compilation for this not working. Removed jekyll frontmatter tags and import statement, commented out recipe scss file.
+//SCSS compilation for this not working.
 
 .recipe-pad {
     padding-left: 6rem;
