--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -1,3 +1,5 @@
+//SCSS compilation for this not working. Removed jekyll frontmatter tags and import statement, commented out recipe scss file.
+
 .recipe-pad {
     padding-left: 6rem;
     padding-right: 6rem;
