Add full height intro hero section, add typeitjs, hide full name from homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/potted-plant-emoji-favicon.png">
     <script src="https://kit.fontawesome.com/2d47902197.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
+
   </head>
   <body id="bodyID">
     {% include navigation.html %}
     <button><input class="dark-mode-checkbox" type="checkbox" id="moonButton"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
-    <div class="content">
+    <main class="content">
     {{ content }}
-    </div>
+    </main>
     <div class="shape" style="padding:0!important;">
       <div class="custom-shape-divider-top-1658328325">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
